Permit some output in noOutputTest